<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddActivity">

    <include
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookTitle_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:hint="@string/title"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookTitle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:nextFocusForward="@+id/bookAuthor"
            android:singleLine="true"
            android:textColor="#d1766a"
            android:textColorHint="#d1766a"
            android:textColorLink="#d1766a"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookAuthor_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/author"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookAuthor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:nextFocusForward="@+id/bookISBN"
            android:singleLine="true"
            android:textColor="#d1766a"
            android:textColorHint="#d1766a"
            android:textColorLink="#d1766a"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookISBN_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/isbn"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookISBN"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="13"
            android:nextFocusForward="@+id/bookYear"
            android:singleLine="true"
            android:textColor="#d1766a"
            android:textColorHint="#d1766a"
            android:textColorLink="#d1766a"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookYear_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        android:hint="@string/year"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookISBN_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookYear"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:nextFocusForward="@+id/bookPages"
            android:singleLine="true"
            android:textColor="#d1766a"
            android:textColorHint="#d1766a"
            android:textColorLink="#d1766a"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookPages_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        android:hint="@string/book_pages"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookYear_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookPages"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:nextFocusForward="@+id/bookLanguage"
            android:singleLine="true"
            android:textColor="#d1766a"
            android:textColorHint="#d1766a"
            android:textColorLink="#d1766a"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookLanguage_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        android:hint="@string/language"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookPages_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookLanguage"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:nextFocusForward="@+id/bookNotes"
            android:singleLine="true"
            android:textColor="#d1766a"
            android:textColorHint="#d1766a"
            android:textColorLink="#d1766a"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookNotes_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        android:hint="@string/notes"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookLanguage_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookNotes"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:nextFocusForward="@+id/buttonAdd"
            android:textColor="#d1766a"
            android:textColorHint="#d1766a"
            android:textColorLink="#d1766a"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/buttonAdd"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/add_book"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookNotes_hint" />


</androidx.constraintlayout.widget.ConstraintLayout>